--- a/src/Budget/ApplicationBundle/Resources/views/Default/index.html.twig
+++ b/src/Budget/ApplicationBundle/Resources/views/Default/index.html.twig
@@ -39,6 +39,9 @@
                 "modules/reports/project-summary/project-summary-collection": {
                     url: "{{ path("api_v1_reports_project", {"projectId": ":id", "year": ":year"}) }}"
                 },
+                "modules/reports/regional-year/regional-collection": {
+                    url: "{{ path("api_v1_reports_regional", {"id": ":id", "year": ":year"}) }}"
+                },
                 "modules/reports/project-month/project-month-details-collection": {
                     url: "{{ path("api_v1_reports_project_month_detail", {"projectId": ":id", "year": ":year", "month": ":month"}) }}"
                 }
