--- a/web/frontend/application/views/dashboard.tpl.html
+++ b/web/frontend/application/views/dashboard.tpl.html
@@ -46,6 +46,7 @@
                     <ol style="list-style-type: octal; margin-left: 15px;">
                         <li>Разделение на регионы</li>
                         <li>Указывать временно неактивных сотрудников</li>
+                        <li>Выгрузка в эксель</li>
                         <li>Заполнение доп. расходов (командировки, офисные расходы) (с разделением по ролям? Чтобы офисные расходы могли заполнять офис менеджеры? Low priority)</li>
                         <li>Лимиты по проектам (общий бюджет/месячный бюджет)</li>
                         <li>Анализ расходов/потерь по простоям сотрудников</li>
