--- a/web/frontend/application/views/dashboard.tpl.html
+++ b/web/frontend/application/views/dashboard.tpl.html
@@ -53,7 +53,7 @@
                         <li>Тегирование проектов технологиями и ведение портфеля технологий компании и навыков сотрудников</li>
                         <li>Карточка сотрудника (портфолио/навыки/премии/повышения ЗП)</li>
                         <li>Карточка сотрудника (заметки с типами (обещано повышение/косяки/инициативы))</li>
-                        <li>Раздел ФОТ</li>
+                        <li><strike style="text-decoration:line-through;">Раздел ФОТ</strike></li>
                         <li><strike style="text-decoration:line-through;">Раздел Офисные расходы?</strike></li>
                         <li>Планирование: Необходимость ресурса!11</li>
                     </ol>
