--- a/web/frontend/application/views/dashboard.tpl.html
+++ b/web/frontend/application/views/dashboard.tpl.html
@@ -6,7 +6,7 @@
             </div>
 
             <div>
-                <div class="padded">Привет %username%! Сто лет не виделись!</div>
+                <div class="padded">Привет <%=app.user.login%>! Сто лет не виделись!</div>
             </div>
         </div>        
     </div>
