--- a/src/Budget/ApplicationBundle/Resources/views/Default/index.html.twig
+++ b/src/Budget/ApplicationBundle/Resources/views/Default/index.html.twig
@@ -39,6 +39,9 @@
                 "modules/employee/collection": {
                     url: "{{ path("api_v1_get_employees") }}"
                 },
+                "modules/employee/history-collection": {
+                    url: "{{ path("api_v1_get_employee_projectshistory", {"id": ":id"}) }}"
+                },
                 "modules/reports/year/projects-collection": {
                     url: "{{ path("api_v1_reports_projects", {"year": ":year"}) }}"
                 },
