User salary view depending on allowed region

--- a/web/frontend/application/views/dashboard.tpl.html
+++ b/web/frontend/application/views/dashboard.tpl.html
@@ -46,6 +46,7 @@
                     <ol style="list-style-type: octal; margin-left: 15px;">
                         <li>Разделение на регионы</li>
                         <li>Указывать временно неактивных сотрудников</li>
+                        <li>Отчет по проекту. Ч/ч, люди и т.п.</li>
                         <li>Выгрузка в эксель</li>
                         <li>Заполнение доп. расходов (командировки, офисные расходы) (с разделением по ролям? Чтобы офисные расходы могли заполнять офис менеджеры? Low priority)</li>
                         <li>Лимиты по проектам (общий бюджет/месячный бюджет)</li>
@@ -56,6 +57,7 @@
                         <li><strike style="text-decoration:line-through;">Раздел ФОТ</strike></li>
                         <li><strike style="text-decoration:line-through;">Раздел Офисные расходы?</strike></li>
                         <li>Планирование: Необходимость ресурса!11</li>
+
                     </ol>
                 </div>
             </div>
