--- a/web/frontend/application/layouts/main.tpl.html
+++ b/web/frontend/application/layouts/main.tpl.html
@@ -14,9 +14,8 @@
                 <div class="span9">
                     <ul class="breadcrumb">
                     </ul>
-
+                    <div class="regions-in-breadcrumbs a-region-selector" ></div>
                 </div>
-                <div class="span3 a-region-selector"></div>
             </div>
 
         </div>
