--- a/web/frontend/application/views/dashboard.tpl.html
+++ b/web/frontend/application/views/dashboard.tpl.html
@@ -6,7 +6,13 @@
             </div>
 
             <div>
-                <div class="padded">Привет <%=app.user.login%>! Сто лет не виделись!</div>
+                <div class="padded">
+                    <p>Привет <b><%=app.user.login%></b>! </p>
+                    <p>Тебе доступны для просмотра регионы: <%_(app.user.availableRegions).each(function(regionId){%>
+                        <%=app.collection('regions').get(regionId)%>
+                    <%});%></p>
+                </div>
+
             </div>
         </div>        
     </div>
