Убрал ненужные файлы

--- a/web/frontend/application/views/dashboard.tpl.html
+++ b/web/frontend/application/views/dashboard.tpl.html
@@ -50,7 +50,7 @@
                 <div class="tab-header">TODO</div>
                 <div class="padded">
                     <ol style="list-style-type: octal; margin-left: 15px;">
-                        <li>Разделение на регионы</li>
+                        <li><s>Разделение на регионы</s></li>
                         <li>Указывать временно неактивных сотрудников</li>
                         <li>Отчет по проекту. Ч/ч, люди и т.п.</li>
                         <li>Выгрузка в эксель</li>
@@ -60,8 +60,8 @@
                         <li>Тегирование проектов технологиями и ведение портфеля технологий компании и навыков сотрудников</li>
                         <li>Карточка сотрудника (портфолио/навыки/премии/повышения ЗП)</li>
                         <li>Карточка сотрудника (заметки с типами (обещано повышение/косяки/инициативы))</li>
-                        <li><strike style="text-decoration:line-through;">Раздел ФОТ</strike></li>
-                        <li><strike style="text-decoration:line-through;">Раздел Офисные расходы?</strike></li>
+                        <li><strike>Раздел ФОТ</strike></li>
+                        <li><strike>Раздел Офисные расходы?</strike></li>
                         <li>Планирование: Необходимость ресурса!11</li>
 
                     </ol>
