--- a/web/frontend/modules/reports/fot/views/fot.tpl.html
+++ b/web/frontend/modules/reports/fot/views/fot.tpl.html
@@ -1,6 +1,13 @@
 <div class="box">
     <div class="tab-header">
-        ФОТ
+        ФОТ <%=view.options.year%>
+
+        <div class="pull-right" style="margin-right: 10px; margin-top: -1px;">
+            <div class="btn-group">
+                <a class="button j-nav" href="reports/fot/<%=(parseInt(view.options.year)-1)%>"> ◄ </a>
+                <a class="button j-nav" href="reports/fot/<%=(parseInt(view.options.year)+1)%>"> ► </a>
+            </div>
+        </div>
     </div>
 
     <div class="padded j-report"></div>
