--- a/web/frontend/modules/reports/project-summary/views/projects.tpl.html
+++ b/web/frontend/modules/reports/project-summary/views/projects.tpl.html
@@ -1,6 +1,16 @@
 <div class="box">
     <div class="tab-header">
-        Сводный финансовый отчет по проекту
+        Сводный отчет по проекту
+        <%if(view.options.projectId){%>
+        "<%=view.report.getProject()%>" <%=view.options.year%>
+
+        <div class="pull-right" style="margin-right: 10px; margin-top: -1px;">
+            <div class="btn-group">
+                <a class="button j-nav" href="<%=view.report.getProject().linkTo("finance_report_by_year", (parseInt(view.options.year)-1))%>"> ◄ </a>
+                <a class="button j-nav" href="<%=view.report.getProject().linkTo("finance_report_by_year", (parseInt(view.options.year)+1))%>"> ► </a>
+            </div>
+        </div>
+        <%};%>
     </div>
 
     <%if(view.options.projectId){%>
