--- a/web/frontend/modules/reports/year/views/year-report.tpl.html
+++ b/web/frontend/modules/reports/year/views/year-report.tpl.html
@@ -38,7 +38,7 @@
     <tr>
         <th colspan="14">Проектные расходы</th>
     </tr>
-    <%_(view.report.getProjects()).chain().filter(function(project){ return !project.region(); }).each(function(project){%>
+    <%_(view.report.getProjects()).chain().filter(function(project){ return !project.region(); }).sortBy(function(project){ return project.toString();}).each(function(project){%>
     <tr>
         <th><a href="<%=project.linkTo('finance_report_by_year', view.options.year)%>" class="j-nav"><%=project%></a></th>
         <%for(var i=1;i< 13; i++){%>
