--- a/web/frontend/application/views/dashboard.tpl.html
+++ b/web/frontend/application/views/dashboard.tpl.html
@@ -54,7 +54,7 @@
                         <li>Указывать временно неактивных сотрудников</li>
                         <li>Отчет по проекту. Ч/ч, люди и т.п.</li>
                         <li>Выгрузка в эксель</li>
-                        <li>Заполнение доп. расходов (командировки, офисные расходы) (с разделением по ролям? Чтобы офисные расходы могли заполнять офис менеджеры? Low priority)</li>
+                        <li><strike>Заполнение доп. расходов (командировки, офисные расходы) (с разделением по ролям? Чтобы офисные расходы могли заполнять офис менеджеры? Low priority)</strike></li>
                         <li>Лимиты по проектам (общий бюджет/месячный бюджет)</li>
                         <li>Анализ расходов/потерь по простоям сотрудников</li>
                         <li>Тегирование проектов технологиями и ведение портфеля технологий компании и навыков сотрудников</li>
