--- a/web/frontend/modules/report-involvement/views/byEmployee.tpl.html
+++ b/web/frontend/modules/report-involvement/views/byEmployee.tpl.html
@@ -34,14 +34,14 @@ var occupations = app.collection('occupations');
                     </tr>
                     </thead>
                     <tbody>
-                    <%employees.chain().filter(function(employee){
+                    <%employees.active().chain().filter(function(employee){
                     return employee.hasOccupation(occupation);
                     }).each(function(employee){%>
                     <%
                     var involvements = employee.involvements();
                     %>
                     <tr>
-                        <td><%=employee%> <a class="j-nav" href="<%=employee.linkTo(" show")%>"><i
+                        <td><%=employee%> <a class="j-nav" href="<%=employee.linkTo("show")%>"><i
                                 class="icon-user"></i></a></td>
                         <td><%=employee.freetime()%></td>
                         <td>
