Запрет создания затрат с несуществующим типом

--- a/web/frontend/application/views/dashboard.tpl.html
+++ b/web/frontend/application/views/dashboard.tpl.html
@@ -51,6 +51,7 @@
                 <div class="padded">
                     <ol style="list-style-type: octal; margin-left: 15px;">
                         <li><s>Разделение на регионы</s></li>
+                        <li>Годовой отчет. Время загрузки. Оптимизировать</li>
                         <li>Указывать временно неактивных сотрудников</li>
                         <li>Отчет по проекту. Ч/ч, люди и т.п.</li>
                         <li>Выгрузка в эксель</li>
