--- a/web/frontend/helpers/views/model.new/new.tpl.html
+++ b/web/frontend/helpers/views/model.new/new.tpl.html
@@ -45,6 +45,7 @@
                         <option value="">---</option>
                         <%};%>
                         <%collection.each(function(entity){%>
+                        <%if(view.options.fields[key].entityAllowed && !view.options.fields[key].entityAllowed(entity)){return;};%>
                         <option value="<%=entity.id%>" <%if( attr == entity ){%>selected="selected"<%};%>><%=entity%></option>
                         <%});%>
                     </select>
