--- a/web/frontend/helpers/views/model.edit/edit.tpl.html
+++ b/web/frontend/helpers/views/model.edit/edit.tpl.html
@@ -85,8 +85,8 @@ fields.push(key);
         <tfoot>
         <tr>
             <td colspan="2" class="j-buttons">
-                <a class="button j-cancel j-nav" href="<%=model.linkTo('show')%>"><i class="icon-remove"></i> Отменить</a>
-                <button class="button j-save green"><i class="icon-ok"></i> Сохранить</button>
+                <a class="button j-cancel j-nav" href="<%=model.linkTo('show')%>"><i class="icon-remove"></i> <%=i18n.actions.cancel%></a>
+                <button class="button j-save green"><i class="icon-ok"></i> <%=i18n.actions.save%></button>
             </td>
         </tr>
         </tfoot>
@@ -96,8 +96,8 @@ fields.push(key);
     </div>
     <div class="modal-footer">
         <div class="inner-well j-buttons">
-            <a class="button mini rounded light-gray" data-dismiss="modal">Отменить</a>
-            <button class="button j-save mini rounded blue"><i class="icon-ok"></i> Сохранить</button>
+            <a class="button mini rounded light-gray" data-dismiss="modal"><%=i18n.actions.cancel%></a>
+            <button class="button j-save mini rounded blue"><i class="icon-ok"></i> <%=i18n.actions.save%></button>
         </div>
     </div>
 </div>
