--- a/web/frontend/helpers/views/model.show/show.tpl.html
+++ b/web/frontend/helpers/views/model.show/show.tpl.html
@@ -41,7 +41,7 @@
     <tfoot>
     <tr>
         <td colspan="2">
-            <a class="button blue j-nav" href="<%=model.linkTo('edit')%>"><i class="icon-pencil"></i> Редактировать</a>
+            <a class="button blue j-nav" href="<%=model.linkTo('edit')%>"><i class="icon-pencil"></i> <%=i18n.actions.edit%></a>
         </td>
     </tr>
     </tfoot>
