--- a/web/frontend/modules/financial-reports/year/views/year.tpl.html
+++ b/web/frontend/modules/financial-reports/year/views/year.tpl.html
@@ -1,6 +1,6 @@
 <div class="box">
     <div class="tab-header">
-        Сводный годовой отчет <%=view.options.year%>
+        <%=i18n.title%> <%=view.options.year%>
 
         <div class="pull-right" style="margin-right: 10px; margin-top: -1px;">
             <div class="btn-group">
@@ -11,6 +11,6 @@
     </div>
 
     <div class="j-report-container">
-        <div class="padded">Загрузка...</div>
+        <div class="padded"><%=_i18n.actions.loading%>...</div>
     </div>
 </div>
